Fix tests by using older dependency